# rust-slot-bot-poise

.devcontainer/: Dockerfile  compose.yaml  devcontainer.json
workspace/: Cargo.toml
workspace/src/: commands.rs  main.rs
