[package]
name = "liver-for-discord-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
emojis = "0.6.4"
poise = "0.6.1"
rand = "0.8.5"
reqwest = { version = "0.12.12", features = ["json"] }
serde = "1.0.197"
serde_json = "1.0.133"
serenity = { version = "0.12.0", default-features = false, features = ["client", "gateway", "rustls_backend", "model","framework","standard_framework"] }
shuttle-runtime = "0.51.0"
shuttle-serenity = "0.51.0"
tokio = "1.26.0"
tracing = "0.1.37"
